# model-app

./: .gitignore  CHANGELOG.md  CLAUDE.md  EXPORT_FEATURE.md  PROJECT_PROPOSAL.md  README.md  ROADMAP.md  TECH_SPEC.md  UI_DESIGN.md  WISHLIST_DESIGN_BRIEF.md  index.html  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: V10__step_clip_polygon.sql  V11__sprue_system.sql  V12__sprue_panel_open.sql  V13__part_ticked.sql  V14__part_quantity.sql  V15__ticked_count.sql  V16__page_sprue_parts.sql  V17__drop_page_sprue_parts.sql  V18__build_view.sql  V1__initial.sql  V2__instruction_source_file_path.sql  V3__accessory_image_path.sql  V4__page_rotation.sql  V5__active_track_id.sql  V6__photo_starring.sql  V7__replaces_step_index.sql  V8__scalemates_integration.sql  V9__drop_project_scalemates_url.sql
src-tauri/src/: lib.rs  main.rs  models.rs  util.rs
src-tauri/src/commands/: accessories.rs  ai_detection.rs  annotations.rs  build_log.rs  collection.rs  drying_timers.rs  gallery_photos.rs  instructions.rs  media.rs  milestone_photos.rs  mod.rs  paints.rs  palette_entries.rs  progress_photos.rs  projects.rs  reference_images.rs  scalemates.rs  settings.rs  sprue_refs.rs  step_context.rs  step_paint_refs.rs  step_relations.rs  step_sprue_parts.rs  steps.rs  tags.rs  tracks.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/queries/: accessories.rs  annotations.rs  build_log_entries.rs  drying_timers.rs  gallery_photos.rs  instruction_pages.rs  instruction_sources.rs  kit_files.rs  kits.rs  milestone_photos.rs  mod.rs  paints.rs  palette_entries.rs  progress_photos.rs  project_ui_state.rs  projects.rs  reference_images.rs  (+8 more)
src-tauri/src/services/: ai_detection.rs  file_stash.rs  mod.rs  pdf.rs  scalemates.rs
(+82 files in other folders)
