[package]
name = "model-builder-assistant"
version = "1.0.0"
edition = "2021"

[lib]
name = "model_builder_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2.5.3"
mupdf = { version = "0.6", default-features = false, features = ["js", "xps", "svg", "cbz", "img", "html", "epub", "system-fonts"] }
zip = "2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
scraper = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
